...
          });
        },
        destinations: const [
          NavigationDestination(
            icon: Icon(Icons.code),
            selectedIcon: Icon(Icons.code_rounded),
            label: '基礎示例',
          ),
          NavigationDestination(
            icon: Icon(Icons.business_center_outlined),
            selectedIcon: Icon(Icons.business_center),
            label: '實用場景',
          ),
        ],
      ),
    );
  }
}
...
